Looks good now!

--- a/templates/form.html
+++ b/templates/form.html
@@ -4,7 +4,7 @@
 
     <h1>User-signup</h1>
     <form method='Post'>
-        <label>Username:</span>
+        <label><span>Username:</span>
             <input name="username" type="text" value="{{username}}"/>
         </label>
         <p class="error">{{username_error}}</p>
@@ -12,7 +12,7 @@
             <input name="password" type="password" value="{{password}}"/>
         </label>
         <p class="error">{{password_error}}</p>
-        <label><span>Verify Password :</span>
+        <label><span>Verify Password:</span>
             <input name="passwordv" type="password" value="{{passwordv}}"/>
         </label>
         <p class="error">{{passwordv_error}}</p>
