--- a/templates/form.html
+++ b/templates/form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h1>User-signup</h1>
-    <form method='Post'>
+    <form action="/signup" method='Post'>
         <label><span>Username:</span>
             <input name="username" type="text" value="{{username}}"/>
         </label>
